<resources>
    <string name="app_name">mobile learning client</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh_pull_down_label">Pull down to refresh…</string>
    <string name="pull_to_refresh_pull_up_label">Pull up to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_down_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="oauth2_redirect_scheme">owncloud</string>
    <string name="oauth2_redirect_uri">owncloud://callback</string>
    <string name="oauth2_url_endpoint_auth">http://oauth2.authorization.server.org/paht/to/endpoint/for/authorization</string>
    <string name="oauth2_url_endpoint_access">http://oauth2.authorization.server.org/paht/to/endporint/for/access/token</string>
    <string name="oauth2_scope">owncloud</string>
    <string name="oauth2_grant_type">authorization_code</string>
    <string name="oauth2_response_type">code</string>
    <string name="oauth2_client_id">com.owncloud.android</string>
    <string name="oauth2_client_secret" />
    <string name="app_name_owncloud">ownCloud</string>
    <string name="account_type">owncloud</string>
    <string name="authority">org.owncloud000</string>
    <string name="db_file">owncloud.db</string>
    <string name="db_name">ownCloud</string>
    <string name="data_folder">owncloud</string>
    <string name="log_name">Owncloud_</string>
    <string name="default_display_name_for_root_folder">我的空间</string>
    <string name="user_agent">Mozilla/5.0 (Android) ownCloud-android/%1$s</string>
    <string name="server_url" />
    <string name="welcome_link_url">https://owncloud.com/mobile/new</string>
    <string name="share_api_link" />
    <string name="auth_method_oauth2">off</string>
    <string name="auth_method_saml_web_sso">off</string>
    <string name="send_files_to_other_apps">on</string>
    <string name="url_help">http://owncloud.com/mobile/help</string>
    <string name="url_imprint" />
    <string name="mail_recommend">mailto:</string>
    <string name="mail_feedback">mailto:apps@owncloud.com</string>
    <string name="url_app_download">https://play.google.com/store/apps/details?id=com.owncloud.android</string>
    <string name="mail_logger" />
    <string name="add_app">Builing</string>
    <string name="dialog_title">Kind reminder</string>
    <string name="dialog_message">Confirm closing the program？</string>
    <string name="dialog_negativeButton">cancel</string>
    <string name="dialog_positiveButton">Confirm</string>
    <string name="dxb_name">Guiding Learning</string>
    <string name="ctj_name">My collection</string>
    <string name="zyfd_name">Job counseling</string>
    <string name="homework_name">Homework</string>
    <string name="cuotiji_name">Wrong Question</string>
    <string name="app_name_setting">Configuration</string>
    <string name="hinturl">Enter Website</string>
    <string name="hintusername">Enter user name</string>
    <string name="hintpassword">Enter password</string>
    <string name="forgetpass"><u>Forgot password</u></string>
    <string name="updatepass"><u>Edit password</u></string>
    <string name="updatenow"><u>Update now ></u></string>
    <string name="modify_pw_failed">Edit password failed</string>
    <string name="modify_pw_ok">Reset password successful</string>
    <string name="app_name_appmanage">My Apps</string>
    <string name="action_download">Download management</string>
    <string name="action_refresh">Refresh</string>
    <string name="open_app">Open</string>
    <string name="uninstall">Uninstall</string>
    <string name="exit_title">Exit reminder</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="update_title">Update reminder</string>
    <string name="update_message">New edition found, do you want to update now?</string>
    <string name="update_notice">Updating, please wait.</string>
    <string name="button_positive">Confirm</string>
    <string name="button_nagetive">Cancel</string>
    <string name="init_message">Starting application. initiating, please wait...</string>
    <string name="exit_myapp">Exit</string>
    <string name="app_name_home_school">Chat</string>
    <string name="myapp_title">My APPs</string>
    <string name="app_name_studystore">Learning store</string>
    <string name="app_name_owncolund">My space</string>
    <string name="app_name_mycamera">My camera</string>
    <string name="app_name_myDiscussion">Interaction Talk</string>
    <string name="app_name_myfile">My Files</string>
    <string name="app_name_happ_class">HappyClass</string>
    <string name="app_name_building">Watch this space!</string>
    <string name="about_android">%1$s Android App</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage Accounts</string>
    <string name="prefs_pincode">App PIN</string>
    <string name="prefs_pincode_summary">Protect your client</string>
    <string name="prefs_instant_upload">Instant picture uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload pictures taken by camera</string>
    <string name="prefs_instant_video_upload">Instant video uploads</string>
    <string name="prefs_instant_video_upload_summary">Instantly upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable Logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging History</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete History</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
    <string name="recommend_subject">Try %1$s on your smartphone!</string>
    <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!
Download here: %2$s"</string>
    <string name="auth_check_server">Check Server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_btn_new_folder_text">New folder</string>
    <string name="uploader_top_message">Choose upload folder:</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please setup an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_wrn_no_content_title">No content to upload</string>
    <string name="uploader_wrn_no_content_text">No content was received. Nothing to upload.</string>
    <string name="uploader_error_forbidden_content">%1$s is not allowed to access the shared content</string>
    <string name="uploader_info_uploading">Uploading</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_loading">Loading...</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="file_list_folder">folder</string>
    <string name="file_list_folders">folders</string>
    <string name="file_list_file">file</string>
    <string name="file_list_files">files</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Refresh file</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="about_title">About</string>
    <string name="instant_upload_on_wifi">Upload pictures via WiFi only</string>
    <string name="instant_video_upload_on_wifi">Upload videos via WiFi only</string>
    <string name="prefs_instant_upload_path_title">Upload Path</string>
    <string name="prefs_category_accounts">Accounts</string>
    <string name="prefs_category_instant_uploading">Instant Uploads</string>
    <string name="prefs_category_security">Security</string>
    <string name="prefs_instant_video_upload_path_title">Upload Video Path</string>
    <string name="setting_back">Back</string>
    <string name="appscontrol">AppManager</string>
    <string name="appsearch">Search</string>
    <string name="appedthint">Enter appname</string>
    <string name="appclean">Clean cache</string>
    <string name="see_voice_anwser">查看语音答案</string>
    <string name="html_submit">Submit</string>
    <string name="html_loding_topic">Loading questions...</string>
    <string name="html_answer">Answer:</string>
    <string name="html_enter_your_answer">Touch to enter your answer</string>
    <string name="html_listen_explain">Lecture</string>
    <string name="html_parsing">Analysis</string>
    <string name="html_examination_site">Key</string>
    <string name="html_wrong_set">Wrong Qs</string>
    <string name="html_interpretation">Help</string>
    <string name="html_handwritten">Handwrite</string>
    <string name="html_input">Enter</string>
    <string name="html_taking_pictures">Camera</string>
    <string name="html_hint_answer">Answer</string>
    <string name="html_retake">Retake</string>
    <string name="html_clear">Clear</string>
    <string name="html_undo">Cancel</string>
    <string name="html_restore">Restore</string>
    <string name="html_save">Save</string>
    <string name="html_delete">Delete</string>
    <string name="html_newline">Newline</string>
    <string name="html_space">Space</string>
    <string name="html_back">Back</string>
    <string name="html_previous">Prev</string>
    <string name="html_next">Next</string>
    <string name="voice">voice</string>
    <string name="hold_talk">按住说话</string>
</resources>