<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_category_accounts" android:key="accounts_category" />
    <PreferenceCategory android:title="@string/prefs_category_security">
        <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:title="@string/prefs_pincode" android:key="set_pincode" android:summary="@string/prefs_pincode_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_instant_uploading" android:key="instant_uploading_category">
        <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:title="@string/prefs_instant_upload" android:key="instant_uploading" android:summary="@string/prefs_instant_upload_summary" />
        <com.owncloud.android.ui.PreferenceWithLongSummary android:title="@string/prefs_instant_upload_path_title" android:key="instant_upload_path" />
        <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:title="@string/instant_upload_on_wifi" android:key="instant_upload_on_wifi" />
        <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:title="@string/prefs_instant_video_upload" android:key="instant_video_uploading" android:summary="@string/prefs_instant_video_upload_summary" />
        <com.owncloud.android.ui.PreferenceWithLongSummary android:title="@string/prefs_instant_video_upload_path_title" android:key="instant_video_upload_path" />
        <com.owncloud.android.ui.CheckBoxPreferenceWithLongTitle android:title="@string/instant_video_upload_on_wifi" android:key="instant_video_upload_on_wifi" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_more" android:key="more">
        <Preference android:title="@string/prefs_help" android:key="help" />
        <Preference android:title="@string/prefs_recommend" android:key="recommend" />
        <Preference android:title="@string/prefs_feedback" android:key="feedback" />
        <Preference android:title="@string/prefs_imprint" android:key="imprint" />
        <Preference android:id="@id/about_app" android:title="@string/about_title" android:key="about_app" />
    </PreferenceCategory>
</PreferenceScreen>