<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffe1e1e1" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/writeheight">
            <ScrollView android:scrollbarThumbVertical="@drawable/scrollbarthumb" android:id="@id/scroll_ex_write_answer" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="@dimen/writeheight" android:fadeScrollbars="false">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/ex_bgimageview" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/writeheight" android:layout_marginLeft="10.0px" android:layout_marginRight="10.0px" android:scaleType="matrix" />
                </LinearLayout>
            </ScrollView>
            <com.lee.homework.view.SeekBar android:layout_gravity="right" android:id="@id/scroll_seekbar" android:layout_width="25.0px" android:layout_height="@dimen/writeheight" android:progressDrawable="@color/transparent" android:thumb="@drawable/seekbarthumb" android:thumbOffset="0.0dip" android:layout_centerVertical="true" />
        </FrameLayout>
        <com.lee.homework.view.SketchPadView android:id="@id/ex_sketchpad" android:layout_width="fill_parent" android:layout_height="@dimen/writeheight" android:layout_marginLeft="10.0px" android:layout_marginRight="25.0px" />
        <LinearLayout android:orientation="vertical" android:id="@id/ex_txt_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:gravity="top" android:id="@id/ex_bgtext_edit" android:background="#ffffffff" android:visibility="gone" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/writeheight" android:hint="@string/html_hint_answer" android:ems="10" android:lineSpacingExtra="4.0dip" />
            <ListView android:id="@id/lv_bgtext_edit" android:background="#ffffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/writeheight" android:transcriptMode="normal" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="5.0px">
        <Button android:textColor="#ff000000" android:id="@id/ex_rephoto" android:visibility="gone" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_retake" />
        <Button android:textColor="#ff000000" android:id="@id/ex_clear" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_clear" />
        <Button android:textColor="#ff000000" android:id="@id/ex_undo" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_undo" />
        <Button android:textColor="#ff000000" android:id="@id/ex_redo" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_restore" />
        <Button android:textColor="#ff000000" android:id="@id/ex_save" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="3.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_save" />
        <Button android:textColor="#ff000000" android:id="@id/ex_delete" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginLeft="63.0dip" android:layout_marginTop="3.0dip" android:text="@string/html_delete" />
        <Button android:textColor="#ff000000" android:id="@id/ex_enter" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/html_newline" />
        <Button android:textColor="#ff000000" android:id="@id/ex_space" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/html_space" />
        <Button android:textColor="#ff000000" android:id="@id/ex_submit" android:background="@drawable/exam_button" android:visibility="gone" android:layout_width="72.0dip" android:layout_height="34.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/html_submit" />
        <Button android:textColor="#ff000000" android:id="@id/dialog_btnback" android:layout_width="72.0dip" android:layout_height="40.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/html_back" />
    </LinearLayout>
</LinearLayout>