<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/newbgcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <Button android:textStyle="bold" android:textColor="@color/whilte" android:id="@id/btnBack" android:background="@drawable/button_bg" android:layout_width="60.0dip" android:layout_height="30.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="4.0dip" android:text="@string/setting_back" />
        <TextView android:textSize="26.0sp" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/appscontrol" />
        <Button android:textStyle="bold" android:textColor="@color/whilte" android:id="@id/btnSearch" android:background="@drawable/button_bg" android:layout_width="80.0dip" android:layout_height="30.0dip" android:layout_marginLeft="15.0dip" android:layout_marginTop="4.0dip" android:text="@string/appsearch" android:layout_alignParentRight="true" />
        <Button android:textStyle="bold" android:textColor="@color/whilte" android:id="@id/btnClean" android:background="@drawable/button_bg" android:layout_width="120.0dip" android:layout_height="30.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="15.0dip" android:text="@string/appclean" android:layout_toLeftOf="@id/btnSearch" />
    </RelativeLayout>
    <EditText android:textColor="@color/black" android:id="@id/et_appsearch" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="5.0dip" android:hint="@string/appedthint" />
    <ListView android:id="@id/appcontrol_lv" android:background="@color/newbgcolor" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>